refactor(api): update date handling and method signatures
- Refactored date handling in appointment methods to use LocalDate instead of Calendar.
- Updated method signatures to reflect clearer naming conventions and return types.
- Removed redundant comments and refactored documentation blocks for better readability.
- Improved handling of user queries and removed unnecessary code sections.